# TeachingSystem

./: CMakeLists.txt  addclassdialog.ui  addcollegedialog.ui  addcoursedialog.cpp  addcoursedialog.h  addcoursedialog.ui  addmajordialog.cpp  addmajordialog.h  addmajordialog.ui  addteacherdialog.cpp  addteacherdialog.h  adduserdialog.cpp  adduserdialog.ui  batchimportdialog.cpp  batchimportdialog.h  batchimportdialog.ui  classpage.cpp  classpage.h  classpage.ui  collegepage.cpp  collegepage.h  collegepage.ui  homepage.cpp  homepage.h  homepage.ui  loginwindow.ui  main.cpp  majorpage.cpp  majorpage.h  majorpage.ui  studentcoursepage.cpp  studentcoursepage.h  studentcoursepage.ui  studentdialog.cpp  studentdialog.h  studentgradepage.cpp  studentgradepage.ui  studenthomepage.cpp  studenthomepage.h  studentinfopage.cpp  (+26 more)
.qtcreator/: CMakeLists.txt.user.f4563cc
666_zhuanzong/: CMakeLists.txt  addclassdialog.cpp  addclassdialog.h  addcollegedialog.cpp  addcollegedialog.h  addstudentdialog.cpp  addstudentdialog.h  addstudentdialog.ui  addteacherdialog.cpp  addteacherdialog.h  addteacherdialog.ui  adduserdialog.h  batchimportdialog.cpp  batchimportdialog.h  classpage.cpp  classpage.h  collegepage.cpp  collegepage.h  databasemannager.cpp  databasemannager.h  homepage.cpp  homepage.h  homepage.ui  loginwindow.cpp  loginwindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  majorpage.cpp  majorpage.h  studentcoursepage.cpp  studentcoursepage.h  studentcoursepage.ui  studentdialog.ui  studentgradepage.h  studenthomepage.ui  studentinfopage.cpp  studentinfopage.h  studentinfopage.ui  studentmainwindow.cpp  (+23 more)
666_zhuanzong/.qtcreator/: CMakeLists.txt.user.e3a6a80
build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
build_mingw/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  deploy__666_zhuanzong_e320d75e73.cmake
build_mingw/666_zhuanzong_autogen/: deps  mocs_compilation.cpp
build_mingw/666_zhuanzong_autogen/EWIEGA46WW/: moc_addclassdialog.cpp  moc_addclassdialog.cpp.d  moc_addcollegedialog.cpp  moc_addcollegedialog.cpp.d  moc_addcoursedialog.cpp  moc_addcoursedialog.cpp.d  moc_addmajordialog.cpp  moc_addmajordialog.cpp.d  moc_addstudentdialog.cpp  moc_addstudentdialog.cpp.d  moc_addteacherdialog.cpp  moc_addteacherdialog.cpp.d  moc_adduserdialog.cpp  moc_adduserdialog.cpp.d  moc_batchimportdialog.cpp  moc_batchimportdialog.cpp.d  moc_classpage.cpp  moc_classpage.cpp.d  moc_collegepage.cpp  moc_collegepage.cpp.d  moc_homepage.cpp  moc_homepage.cpp.d  moc_loginwindow.cpp  moc_loginwindow.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_majorpage.cpp  moc_majorpage.cpp.d  moc_studentcoursepage.cpp  (+29 more)
(+11 files in other folders)
